<resources>
    <string name="app_name">KotlinNewsApplication</string>
    <string name="view_all">View all</string>
    <string name="welcome">Welcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="saved">Saved</string>
    <string name="settings">Settings</string>
    <string name="discover_subtitle">News from all around the world</string>
    <string name="search">Search</string>
    <string name="search_subtitle">Search news from around the world</string>
    <string name="auth_title">Sign in or create an account</string>
    <string name="auth_subtitle">Stay updated with the latest news and breaking updates from around the world.</string>
    <string name="password_title">Sign in or create an account</string>
    <string name="password_subtitle">Stay updated with the latest news and breaking updates from around the world.</string>
    <string name="email_address">Email address</string>
    <string name="continue_text">Continue</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or_continue_with">or continue with</string>
    <string name="privacy_policy">By continuing you agree to Terms of Service and Privacy Policy</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="verify_title">Please verify your email address</string>
    <string name="verify_subtitle">We’ve sent a verification link to your email. Please check it and click the link.</string>
    <string name="registration_title">Finish creating account</string>
    <string name="registration_subtitle">You\'re almost there! Provide your details to complete your registration.</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="ok">OK</string>
    <string name="sign_in_title">Sign in</string>
    <string name="register_title">Create an account</string>
    <string name="read_more">Read More</string>
    <string name="comments">Comments</string>
    <string name="saved_news_subtitle">The news you saved to read later is here</string>
    <string name="saved_news_title">Saved News</string>
    <string name="settings_subtitle">Manage your account and preferences</string>
    <string name="update_user_information_title">User Information</string>
    <string name="update_user_information_subtitle">Update your user details</string>
    <string name="update_email_address_title">Email Address</string>
    <string name="update_email_address_subtitle">Change your email address</string>
    <string name="update_password_title">Password</string>
    <string name="update_password_subtitle">Update your password</string>
    <string name="logout_title">Logout</string>
    <string name="logout_subtitle">Log out of your account</string>
    <string name="update">Update</string>
    <string name="current_email_address">Current email address</string>
    <string name="new_email_address">New email address</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="cancel">Cancel</string>
    <string name="dark_mode_title">Dark Mode</string>
    <string name="dark_mode_subtitle">Toggle dark or light mode</string>
</resources>