<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.settings.SettingsFragment">

    <TextView
        android:id="@+id/discoverTitle"
        style="@style/TextAppearance.Custom.HeadlineLarge.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/discoverSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_subtitle"
        android:layout_marginTop="0dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discoverTitle"
        style="@style/TextAppearance.Custom.BodyMedium.SemiBold"
        android:textColor="@color/text_secondary" />

    <LinearLayout
        android:id="@+id/changeThemeCard"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/card_bg"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discoverSubtitle">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode_title"
                style="@style/TextAppearance.Custom.TitleLarge.SemiBold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode_subtitle"
                style="@style/TextAppearance.Custom.BodyMedium.SemiBold"
                android:textColor="@color/text_secondary" />
        </LinearLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/themeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomSwitchStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/updateUserInformationButton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/card_bg"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeThemeCard">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_user_information_title"
                style="@style/TextAppearance.Custom.TitleLarge.SemiBold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_user_information_subtitle"
                style="@style/TextAppearance.Custom.BodyMedium.SemiBold"
                android:textColor="@color/text_secondary" />
        </LinearLayout>

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@drawable/circle_icon_secondary_bg"
            android:padding="8dp"
            android:rotation="180"
            android:src="@drawable/back"
            app:tint="@color/text_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/updateEmailButton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/card_bg"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateUserInformationButton">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_email_address_title"
                style="@style/TextAppearance.Custom.TitleLarge.SemiBold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_email_address_subtitle"
                style="@style/TextAppearance.Custom.BodyMedium.SemiBold"
                android:textColor="@color/text_secondary" />
        </LinearLayout>

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@drawable/circle_icon_secondary_bg"
            android:padding="8dp"
            android:rotation="180"
            android:src="@drawable/back"
            app:tint="@color/text_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/updatePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/card_bg"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateEmailButton">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_password_title"
                style="@style/TextAppearance.Custom.TitleLarge.SemiBold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_password_subtitle"
                style="@style/TextAppearance.Custom.BodyMedium.SemiBold"
                android:textColor="@color/text_secondary" />
        </LinearLayout>

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@drawable/circle_icon_secondary_bg"
            android:padding="8dp"
            android:rotation="180"
            android:src="@drawable/back"
            app:tint="@color/text_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/card_bg"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updatePasswordButton">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout_title"
                style="@style/TextAppearance.Custom.TitleLarge.SemiBold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout_subtitle"
                style="@style/TextAppearance.Custom.BodyMedium.SemiBold"
                android:textColor="@color/text_secondary" />
        </LinearLayout>

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@drawable/circle_icon_secondary_bg"
            android:padding="10dp"
            android:src="@drawable/logout"
            app:tint="@color/text_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

</androidx.constraintlayout.widget.ConstraintLayout>