<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.view.auth.MailFragment">

    <TextView
        android:id="@+id/authTitle"
        style="@style/TextAppearance.Custom.HeadlineLarge.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="74dp"
        android:text="@string/auth_title" />

    <TextView
        android:id="@+id/authSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_subtitle"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"
        style="@style/TextAppearance.Custom.BodyMedium.SemiBold"
        android:textColor="@color/text_secondary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:hintAnimationEnabled="false"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        app:errorTextAppearance="@style/TextAppearance.Custom.BodyMedium.SemiBold">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:textColorHint="@color/hint"
            android:paddingHorizontal="16dp"
            android:background="@drawable/input_bg"
            style="@style/TextAppearance.Custom.BodyMedium.SemiBold"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="54dp">

        <Button
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginHorizontal="16dp"
            style="@style/Widget.Material3.CustomButton"
            android:textColor="@color/white"
            android:text="@string/continue_text"
            android:background="@drawable/button_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>