<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="user"
            type="com.cengizhanerturan.kotlinnewsapplication.domain.model.User" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".presentation.view.settings.update_email_address.UpdateEmailAddressFragment">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/circle_icon_bg"
            android:contentDescription="back button"
            android:padding="8dp"
            app:tint="@color/text_primary"
            android:src="@drawable/back" />

        <TextView
            style="@style/TextAppearance.Custom.HeadlineLarge.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/update_email_address_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_email_address_subtitle"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="16dp"
            style="@style/TextAppearance.Custom.BodyMedium.SemiBold"
            android:textColor="@color/text_secondary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/currentEmailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:errorEnabled="true"
            app:hintAnimationEnabled="false"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="16dp"
            app:errorTextAppearance="@style/TextAppearance.Custom.BodyMedium.SemiBold">

            <EditText
                android:id="@+id/currentEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:importantForAutofill="yes"
                android:inputType="textEmailAddress"
                android:hint="@string/current_email_address"
                android:textColorHint="@color/hint"
                android:paddingHorizontal="16dp"
                android:background="@drawable/input_bg"
                android:enabled="false"
                android:text="@{user.email}"
                style="@style/TextAppearance.Custom.BodyMedium.SemiBold"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:errorEnabled="true"
            app:hintAnimationEnabled="false"
            android:layout_marginHorizontal="16dp"
            app:errorTextAppearance="@style/TextAppearance.Custom.BodyMedium.SemiBold">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:importantForAutofill="yes"
                android:inputType="textEmailAddress"
                android:hint="@string/new_email_address"
                android:textColorHint="@color/hint"
                android:paddingHorizontal="16dp"
                android:background="@drawable/input_bg"
                style="@style/TextAppearance.Custom.BodyMedium.SemiBold"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:errorEnabled="true"
            app:hintAnimationEnabled="false"
            app:endIconMode="password_toggle"
            android:layout_marginHorizontal="16dp"
            app:errorTextAppearance="@style/TextAppearance.Custom.BodyMedium.SemiBold">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColorHint="@color/hint"
                android:paddingHorizontal="16dp"
                android:background="@drawable/input_bg"
                style="@style/TextAppearance.Custom.BodyMedium.SemiBold"
                android:maxLines="1"
                android:imeOptions="actionNext" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="54dp">

            <Button
                android:id="@+id/updateButton"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginHorizontal="16dp"
                style="@style/Widget.Material3.CustomButton"
                android:textColor="@color/white"
                android:text="@string/update"
                android:background="@drawable/button_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loading"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loading" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>

