<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="user"
            type="com.cengizhanerturan.kotlinnewsapplication.domain.model.User" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".presentation.view.settings.update_email_address.UpdateUserInfoFragment"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/circle_icon_bg"
            android:contentDescription="back button"
            android:padding="8dp"
            app:tint="@color/text_primary"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/passwordTitle"
            style="@style/TextAppearance.Custom.HeadlineLarge.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/update_user_information_title" />

        <TextView
            android:id="@+id/passwordSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_user_information_subtitle"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="16dp"
            style="@style/TextAppearance.Custom.BodyMedium.SemiBold"
            android:textColor="@color/text_secondary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:errorEnabled="true"
            app:hintAnimationEnabled="false"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="16dp"
            app:errorTextAppearance="@style/TextAppearance.Custom.BodyMedium.SemiBold">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@{user.name}"
                android:hint="@string/name"
                android:textColorHint="@color/hint"
                android:paddingHorizontal="16dp"
                android:background="@drawable/input_bg"
                style="@style/TextAppearance.Custom.BodyMedium.SemiBold"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surnameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:errorEnabled="true"
            app:hintAnimationEnabled="false"
            android:layout_marginHorizontal="16dp"
            app:errorTextAppearance="@style/TextAppearance.Custom.BodyMedium.SemiBold">

            <EditText
                android:id="@+id/surnameEditText"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@{user.surname}"
                android:hint="@string/surname"
                android:textColorHint="@color/hint"
                android:paddingHorizontal="16dp"
                android:background="@drawable/input_bg"
                style="@style/TextAppearance.Custom.BodyMedium.SemiBold"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="54dp">

            <Button
                android:id="@+id/updateButton"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginHorizontal="16dp"
                style="@style/Widget.Material3.CustomButton"
                android:textColor="@color/white"
                android:text="@string/update"
                android:background="@drawable/button_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loading"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loading" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</layout>
